--- a/HabitTracker/Components/Layout/NavMenu.razor
+++ b/HabitTracker/Components/Layout/NavMenu.razor
@@ -1,29 +1,40 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">HabitTracker</a>
+﻿@* Uses Bootstrap navbar classes for a horizontal top bar *@
+<nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom mb-3">
+    @* Use container and custom class for max-width *@
+    <div class="container content-container"> 
+        <a class="navbar-brand me-0" href=""> 
+            <div class="brand-container">
+                <span class="brand-name">Momentum 🚀</span>
+                <span class="brand-motto">Progress, Amplified</span>
+            </div>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        @* Removed justify-content-center from this div *@
+        <div class="collapse navbar-collapse" id="navbarNav"> 
+            @* Add ms-auto to the ul element to push links to the right *@
+            <ul class="navbar-nav ms-auto"> 
+                <li class="nav-item px-3"> 
+                    <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                        <span class="bi bi-house-door-fill" aria-hidden="true"></span> Home
+                    </NavLink>
+                </li>
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="counter">
+                        <span class="bi bi-plus-square-fill" aria-hidden="true"></span> Counter
+                    </NavLink>
+                </li>
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="weather">
+                        <span class="bi bi-list-nested" aria-hidden="true"></span> Weather
+                    </NavLink>
+                </li>
+            </ul>
+        </div>
     </div>
-</div>
+</nav>
 
-<input type="checkbox" title="Navigation menu" class="navbar-toggler"/>
-
-<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
-    <nav class="nav flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
-        </div>
-    </nav>
-</div>
+@code {
+    // C# code block remains unchanged
+}
